--- a/lecture_01/python_basics.ipynb
+++ b/lecture_01/python_basics.ipynb
@@ -564,9 +564,9 @@
     }
    ],
    "source": [
-    "str = \"Hello\"\n",
-    "print(str[1])\n",
-    "print(str[-1])"
+    "a_str = \"Hello\"\n",
+    "print(a_str[1])\n",
+    "print(a_str[-1])"
    ]
   },
   {
