--- a/lecture_01_intro/numpy_basics.ipynb
+++ b/lecture_01_intro/numpy_basics.ipynb
@@ -11,13 +11,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,13 +34,6 @@
    "source": [
     "## N-dimensional arrays"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -337,6 +323,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](img/numpy_indexing.png)\n",
+    "![](img/numpy_fancy_indexing.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reductions"
    ]
   },
@@ -572,6 +566,13 @@
     "print()\n",
     "\n",
     "print(A * c)  # element-wise multiplication of c with each col of A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](img/numpy_broadcasting.png)"
    ]
   },
   {
