--- a/lecture_01_intro/python_basics.ipynb
+++ b/lecture_01_intro/python_basics.ipynb
@@ -36,13 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "hi\n",
       "Hello\n"
      ]
     }
@@ -54,6 +55,7 @@
     "run this cell.\n",
     "\"\"\"\n",
     "# Display a message. (This is a single line comment.)\n",
+    "print(\"hi\")\n",
     "print(\"Hello\")  # Say hello. (This is a comment that follows a line of code.)"
    ]
   },
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +128,7 @@
        "(3, 'hi', 82.01)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +222,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-76257eac0bd9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Can't do operations with incompatible types\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;34m\"1\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-9-76257eac0bd9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Can't do operations with incompatible types\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;34m\"1\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
      ]
     }
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +288,8 @@
       "2\n",
       "True\n",
       "['a', 'b', 'c']\n",
-      "c\n"
+      "c\n",
+      "True\n"
      ]
     }
    ],
@@ -298,7 +301,8 @@
     "print(a[1])  # 2nd element\n",
     "print(a[-2])  # 2nd to last element\n",
     "print(a[-1])  # last element\n",
-    "print(a[-1][2])  # 3rd element of the array that is the last element"
+    "print(a[-1][2])  # 3rd element of the array that is the last element\n",
+    "print(a[-2])"
    ]
   },
   {
@@ -464,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +477,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,16 +523,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1, 2, 3], [4, 5, 6]]"
+       "([[1, 2, 3], [4, 5, 6]], [[1, 2, 3], [4, 100, 6]])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +542,7 @@
     "a = [[1, 2, 3], [4, 5, 6]]\n",
     "b = copy.deepcopy(a)\n",
     "a[1][1] = 100\n",
-    "b"
+    "b, a"
    ]
   },
   {
