--- a/lecture_02_random_walk_lab/homework_01_random_walk_lab.ipynb
+++ b/lecture_02_random_walk_lab/homework_01_random_walk_lab.ipynb
@@ -28,7 +28,9 @@
    "metadata": {},
    "source": [
     "# Example #1. Discrete random walk in one dimension\n",
-    "Write a program simulating a one-dimensional random walk amongst 100 discrete sites where each of 1000 independent particles has equal probability to step in either direction at each time step. Treat the edges as reflecting (i.e. the particle moves back the other direction with 100% probability). Start the partilces distributed uniformly at sites 11-15 and observe how they distribute as time progresses. Make the probability of going left-vs-right a variable in the program so that you can play around with it. Use plots to visually convey what is going on."
+    "Write a program simulating a one-dimensional random walk amongst 100 discrete sites where each of 1000 independent particles has equal probability to step in either direction at each time step. Treat the edges as reflecting (i.e. the particle moves back the other direction with 100% probability). Start the partilces distributed uniformly at sites 11-15 and observe how they distribute as time progresses. Make the probability of going left-vs-right a variable in the program so that you can play around with it. Use plots to visually convey what is going on.\n",
+    "\n",
+    "![](img/random_walk_1d.gif)"
    ]
   },
   {
@@ -196,15 +198,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example #2. Discrete random walk in two dimensions\n",
-    "Write a program simulating a two-dimensional random walk amongst 100x100 discrete sites with 1000 independent particles initially distributed uniformly at sites 11-12 in each dimension with 25% probability to step in each direction and reflecting boundaries. Use plots to visually convey what is going on."
+    "As time progresses particles spread out to become uniformly distributed."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As time progresses particles spread out towards a uniform distribution across all available positions. Colors denote particle distribution at selected time points."
+    "# Example #2. Discrete random walk in two dimensions\n",
+    "Write a program simulating a two-dimensional random walk amongst 100x100 discrete sites with 1000 independent particles initially distributed uniformly at sites 11-12 in each dimension with 25% probability to step in each direction and reflecting boundaries. Use plots to visually convey what is going on.\n",
+    "\n",
+    "![](img/random_walk_2d.gif)"
    ]
   },
   {
@@ -358,6 +362,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As time progresses particles spread out to become uniformly distributed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Example #3. Continuous random walk in three dimensions\n",
     "Write a program simulating a three-dimensional random walk in a continuous space. Let 1000 independent particles all start at random positions within a cube with corners at (0,0,0) and (1,1,1). At each time step each particle will move in a random direction by a random amount between 0-1. Use plots to visually convey what is going on. Draw the path for a single particle."
    ]
@@ -479,6 +490,13 @@
     "    ax.set_ylabel('y')\n",
     "    ax.set_zlabel('z')\n",
     "    ax.set_title(\"Time Step \" + str(t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As time progresses particles continue to spread further and further apart."
    ]
   },
   {
