--- a/lecture_01_intro/numpy_basics.ipynb
+++ b/lecture_01_intro/numpy_basics.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +224,7 @@
    "source": [
     "m = np.random.randint(1, 10, size=(5, 5))  # 3x3 random matrix of ints between 1 and 10\n",
     "print(m)\n",
+    "\n",
     "m[0,0], m[1,0], m[3,4]  # [row,col] indexes"
    ]
   },
@@ -403,15 +404,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[6 5]\n",
-      " [6 7]]\n",
+      "[[9 7]\n",
+      " [7 8]]\n",
       "\n",
       "[2 3]\n",
       "\n",
@@ -440,25 +441,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[6 5]\n",
-      " [6 7]]\n",
+      "[[9 7]\n",
+      " [7 8]]\n",
       "\n",
-      "[[12 10]\n",
-      " [12 14]]\n"
+      "[[81 49]\n",
+      " [49 64]]\n"
      ]
     }
    ],
    "source": [
     "print(A)\n",
     "print()\n",
-    "print(A * 2)"
+    "print(A * A)"
    ]
   },
   {
@@ -715,16 +716,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.0052109389998805"
+       "2.000289000999601"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,16 +743,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.4122149779996107, array([ 1.,  4.,  9., 16., 25.]))"
+       "0.418272782999793"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,21 +763,21 @@
     "for i in range(len(a)):\n",
     "    a[i] = a[i]**2\n",
     "stop = timeit.default_timer()\n",
-    "stop - start, a[:5]"
+    "stop - start"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.003264274999310146, array([ 1.,  4.,  9., 16., 25.]))"
+       "0.002637679000144999"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +787,7 @@
     "start = timeit.default_timer()\n",
     "a = a**2\n",
     "stop = timeit.default_timer()\n",
-    "stop - start, a[:5]"
+    "stop - start"
    ]
   },
   {
