--- a/lecture_01_intro/python_basics.ipynb
+++ b/lecture_01_intro/python_basics.ipynb
@@ -771,21 +771,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x < 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 3\n",
-    "if x < 5:\n",
-    "    print(\"x < 5\")"
+    "if x > 5:\n",
+    "    print(\"x < 5\")\n",
+    "    y = 3\n",
+    "    if False:\n",
+    "        print(\"stuffg\")\n",
+    "    z = 7\n",
+    "z = 4"
    ]
   },
   {
@@ -839,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -859,8 +856,8 @@
    "source": [
     "arr = [1, 2, 3.0, 4.5, \"hello\", True, ['a', 'b', 'c']]\n",
     "\n",
-    "for item in arr:\n",
-    "    print(item)"
+    "for i in arr:\n",
+    "    print(i)"
    ]
   },
   {
@@ -915,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1049,7 @@
    "source": [
     "colors = {\"apple\": \"Red\", \"banana\": \"Yellow\", \"lettuce\": \"Green\", \"gray_RGB\": [0.5, 0.5, 0.5]}\n",
     "\n",
-    "for key, value in colors.items():\n",
+    "for (key, value) in colors.items():\n",
     "    print(key, \":\", value)"
    ]
   },
@@ -1066,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1077,14 +1074,13 @@
        " 3.5,\n",
        " True,\n",
        " [1, 2, 3.0, 4.5, 'hello', True, ['a', 'b', 'c']],\n",
-       " {'apple': 'Green',\n",
+       " {'apple': 'Red',\n",
        "  'banana': 'Yellow',\n",
        "  'lettuce': 'Green',\n",
-       "  'gray_RGB': [0.5, 0.5, 0.5],\n",
-       "  'strawberry': 'Red'}]"
+       "  'gray_RGB': [0.5, 0.5, 0.5]}]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,27 +1335,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 2)"
+       "3"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x = 3\n",
+    "\n",
     "def myfunc(x):\n",
     "    x = 2\n",
-    "    return x\n",
-    "x2 = myfunc(x)\n",
-    "x, x2"
+    "\n",
+    "myfunc(x)\n",
+    "\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'yy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-6daa41ef554c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0myy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'yy' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "yy"
    ]
   },
   {
@@ -1371,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1380,15 +1399,17 @@
        "[1, 100, 3]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = [1, 2, 3]\n",
+    "\n",
     "def myarrayfunc(arr):\n",
     "    arr[1] = 100\n",
+    "\n",
     "myarrayfunc(a)\n",
     "a"
    ]
