--- a/lecture_02_random_walk_lab/homework_01_random_walk_lab.ipynb
+++ b/lecture_02_random_walk_lab/homework_01_random_walk_lab.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework 01 - Random Walk Lab\n",
-    "Due before class on Jan 29"
+    "# Homework 01 - Random Walk Lab"
    ]
   },
   {
@@ -15,7 +14,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits import mplot3d  # for 3d plots\n",
     "import timeit\n",
@@ -97,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6951687269999987 sec\n"
+      "0.8502182050001466 sec\n"
      ]
     }
    ],
@@ -119,29 +117,20 @@
     "        else:\n",
     "            # get a random number for each particle for deciding if it moves left or right\n",
     "            rand_bools = np.random.rand(num_particles_at_site) >= prob_to_step_right\n",
-    "            num_moving_left = np.where(rand_bools == False)[0].size\n",
-    "            num_moving_right = num_particles_at_site - num_moving_left\n",
+    "            #num_moving_left = np.where(rand_bools == False)[0].size\n",
+    "            #num_moving_right = num_particles_at_site - num_moving_left\n",
+    "            num_moving_left = 0\n",
+    "            num_moving_right = 0\n",
+    "            for rand_bool in rand_bools:\n",
+    "                if rand_bool:\n",
+    "                    num_moving_right += 1\n",
+    "                else:\n",
+    "                    num_moving_left += 1\n",
+    "                \n",
     "            particles[site - 1, t] += num_moving_left\n",
     "            particles[site + 1, t] += num_moving_right\n",
     "t1 = timeit.default_timer()\n",
     "print(t1 - t0, \"sec\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Accent', 'Accent_r', 'Blues', 'Blues_r', 'BrBG', 'BrBG_r', 'BuGn', 'BuGn_r', 'BuPu', 'BuPu_r', 'CMRmap', 'CMRmap_r', 'Dark2', 'Dark2_r', 'GnBu', 'GnBu_r', 'Greens', 'Greens_r', 'Greys', 'Greys_r', 'OrRd', 'OrRd_r', 'Oranges', 'Oranges_r', 'PRGn', 'PRGn_r', 'Paired', 'Paired_r', 'Pastel1', 'Pastel1_r', 'Pastel2', 'Pastel2_r', 'PiYG', 'PiYG_r', 'PuBu', 'PuBuGn', 'PuBuGn_r', 'PuBu_r', 'PuOr', 'PuOr_r', 'PuRd', 'PuRd_r', 'Purples', 'Purples_r', 'RdBu', 'RdBu_r', 'RdGy', 'RdGy_r', 'RdPu', 'RdPu_r', 'RdYlBu', 'RdYlBu_r', 'RdYlGn', 'RdYlGn_r', 'Reds', 'Reds_r', 'Set1', 'Set1_r', 'Set2', 'Set2_r', 'Set3', 'Set3_r', 'Spectral', 'Spectral_r', 'Wistia', 'Wistia_r', 'YlGn', 'YlGnBu', 'YlGnBu_r', 'YlGn_r', 'YlOrBr', 'YlOrBr_r', 'YlOrRd', 'YlOrRd_r', 'afmhot', 'afmhot_r', 'autumn', 'autumn_r', 'binary', 'binary_r', 'bone', 'bone_r', 'brg', 'brg_r', 'bwr', 'bwr_r', 'cividis', 'cividis_r', 'cool', 'cool_r', 'coolwarm', 'coolwarm_r', 'copper', 'copper_r', 'cubehelix', 'cubehelix_r', 'flag', 'flag_r', 'gist_earth', 'gist_earth_r', 'gist_gray', 'gist_gray_r', 'gist_heat', 'gist_heat_r', 'gist_ncar', 'gist_ncar_r', 'gist_rainbow', 'gist_rainbow_r', 'gist_stern', 'gist_stern_r', 'gist_yarg', 'gist_yarg_r', 'gnuplot', 'gnuplot2', 'gnuplot2_r', 'gnuplot_r', 'gray', 'gray_r', 'hot', 'hot_r', 'hsv', 'hsv_r', 'inferno', 'inferno_r', 'jet', 'jet_r', 'magma', 'magma_r', 'nipy_spectral', 'nipy_spectral_r', 'ocean', 'ocean_r', 'pink', 'pink_r', 'plasma', 'plasma_r', 'prism', 'prism_r', 'rainbow', 'rainbow_r', 'seismic', 'seismic_r', 'spring', 'spring_r', 'summer', 'summer_r', 'tab10', 'tab10_r', 'tab20', 'tab20_r', 'tab20b', 'tab20b_r', 'tab20c', 'tab20c_r', 'terrain', 'terrain_r', 'twilight', 'twilight_r', 'twilight_shifted', 'twilight_shifted_r', 'viridis', 'viridis_r', 'winter', 'winter_r']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(plt.colormaps())"
    ]
   },
   {
@@ -199,6 +188,23 @@
    "metadata": {},
    "source": [
     "As time progresses particles spread out to become uniformly distributed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Accent', 'Accent_r', 'Blues', 'Blues_r', 'BrBG', 'BrBG_r', 'BuGn', 'BuGn_r', 'BuPu', 'BuPu_r', 'CMRmap', 'CMRmap_r', 'Dark2', 'Dark2_r', 'GnBu', 'GnBu_r', 'Greens', 'Greens_r', 'Greys', 'Greys_r', 'OrRd', 'OrRd_r', 'Oranges', 'Oranges_r', 'PRGn', 'PRGn_r', 'Paired', 'Paired_r', 'Pastel1', 'Pastel1_r', 'Pastel2', 'Pastel2_r', 'PiYG', 'PiYG_r', 'PuBu', 'PuBuGn', 'PuBuGn_r', 'PuBu_r', 'PuOr', 'PuOr_r', 'PuRd', 'PuRd_r', 'Purples', 'Purples_r', 'RdBu', 'RdBu_r', 'RdGy', 'RdGy_r', 'RdPu', 'RdPu_r', 'RdYlBu', 'RdYlBu_r', 'RdYlGn', 'RdYlGn_r', 'Reds', 'Reds_r', 'Set1', 'Set1_r', 'Set2', 'Set2_r', 'Set3', 'Set3_r', 'Spectral', 'Spectral_r', 'Wistia', 'Wistia_r', 'YlGn', 'YlGnBu', 'YlGnBu_r', 'YlGn_r', 'YlOrBr', 'YlOrBr_r', 'YlOrRd', 'YlOrRd_r', 'afmhot', 'afmhot_r', 'autumn', 'autumn_r', 'binary', 'binary_r', 'bone', 'bone_r', 'brg', 'brg_r', 'bwr', 'bwr_r', 'cividis', 'cividis_r', 'cool', 'cool_r', 'coolwarm', 'coolwarm_r', 'copper', 'copper_r', 'cubehelix', 'cubehelix_r', 'flag', 'flag_r', 'gist_earth', 'gist_earth_r', 'gist_gray', 'gist_gray_r', 'gist_heat', 'gist_heat_r', 'gist_ncar', 'gist_ncar_r', 'gist_rainbow', 'gist_rainbow_r', 'gist_stern', 'gist_stern_r', 'gist_yarg', 'gist_yarg_r', 'gnuplot', 'gnuplot2', 'gnuplot2_r', 'gnuplot_r', 'gray', 'gray_r', 'hot', 'hot_r', 'hsv', 'hsv_r', 'inferno', 'inferno_r', 'jet', 'jet_r', 'magma', 'magma_r', 'nipy_spectral', 'nipy_spectral_r', 'ocean', 'ocean_r', 'pink', 'pink_r', 'plasma', 'plasma_r', 'prism', 'prism_r', 'rainbow', 'rainbow_r', 'seismic', 'seismic_r', 'spring', 'spring_r', 'summer', 'summer_r', 'tab10', 'tab10_r', 'tab20', 'tab20_r', 'tab20b', 'tab20b_r', 'tab20c', 'tab20c_r', 'terrain', 'terrain_r', 'twilight', 'twilight_r', 'twilight_shifted', 'twilight_shifted_r', 'viridis', 'viridis_r', 'winter', 'winter_r']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(plt.colormaps())"
    ]
   },
   {
@@ -468,10 +474,10 @@
     "# plot simulation results\n",
     "fig = plt.figure(figsize=(16, 4))\n",
     "\n",
-    "# select 4 time steps corresponding to 0%, 5%, 50% and 100% of the simulated time steps\n",
-    "time_steps = [int(x * (num_time_steps - 1)) for x in [0, 0.05, 0.5, 1]]\n",
+    "# select a few time steps to plot\n",
+    "time_steps = [0, 100, 1000, 1999]\n",
     "\n",
-    "# get the bounds for all of your data\n",
+    "# get the bounds for all of your data across all time points\n",
     "xmin, xmax = np.amin(particles[:, 0, :]), np.amax(particles[:, 0, :])\n",
     "ymin, ymax = np.amin(particles[:, 1, :]), np.amax(particles[:, 1, :])\n",
     "zmin, zmax = np.amin(particles[:, 2, :]), np.amax(particles[:, 2, :])\n",
@@ -525,15 +531,15 @@
     "z = particles[i, 2, :]  # z coords of ith particle for all time points\n",
     "\n",
     "fig = plt.figure(figsize=(10, 10))\n",
-    "ax = fig.add_subplot(111, projection='3d')   # a single plot\n",
-    "ax.plot(x, y, z)\n",
-    "ax.scatter(x[0], y[0], z[0], 'o', color='black')  # starting point\n",
-    "ax.scatter(x[-1], y[-1], z[-1], 'o', color='red')  # ending point\n",
+    "ax = fig.add_subplot(1, 1, 1, projection='3d')   # a single plot\n",
+    "ax.plot(x, y, z, label='Path')\n",
+    "ax.scatter(x[0], y[0], z[0], 'o', color='black', label='Start')  # starting point\n",
+    "ax.scatter(x[-1], y[-1], z[-1], 'o', color='red', label='Stop')  # ending point\n",
     "ax.set_xlabel('x')\n",
     "ax.set_ylabel('y')\n",
     "ax.set_zlabel('z')\n",
     "ax.set_title(\"Path of particle \" + str(i))\n",
-    "ax.legend(['Path', 'Start', 'Stop']);"
+    "ax.legend();"
    ]
   },
   {
