--- a/lecture_04_probability_distributions/probability_distributions.ipynb
+++ b/lecture_04_probability_distributions/probability_distributions.ipynb
@@ -17,6 +17,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Random number generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.27522567, 0.63923076, 0.62389921, 0.77804231, 0.47811353])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.random.seed(82)\n",
+    "np.random.rand(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Binomial distribution example plotting"
    ]
   },
