--- a/homework_08_pca_and_clustering.ipynb
+++ b/homework_08_pca_and_clustering.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "((6336, 640), (64, 640), (64, 640, 99), (640,), 256.0, 3.90625)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,6 +70,25 @@
     "\n",
     "all_eegs_uV.shape, avg_eegs_uV.shape, eeg_uV.shape, time_ms.shape, samplefreq_Hz, dt_ms"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(\"avg_eegs_uV.dat\", \"rb\") as f:\n",
+    "    time_ms, avg_eegs_uV = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
